--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BT Enterprices</title>
+
+    <!-- CSS ELEMENTS  -->
+    <link rel="stylesheet" href="assets/CSS/style.css">
+
+    <!-- Bootstrap Elements -->
+    <link rel="stylesheet" href="assets/CSS/bootstrap.min.css">
+
 </head>
+
 <body>
+
+
     
+
+    <!-- JS ELEMENTS -->
+    <script src="assets/JS/script.js"></script>
+
+    <!-- bootstrap Elements -->
+    <script src="assets/JS/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
