--- a/index.html
+++ b/index.html
@@ -12,9 +12,90 @@
     <!-- Bootstrap Elements -->
     <link rel="stylesheet" href="assets/CSS/bootstrap.min.css">
 
+    <!-- fontawsome Elements -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
 </head>
 
 <body>
+
+
+    <!-- NAV SECTION START -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+
+            <a class="navbar-brand c1 fw-bold text-start" href="index.html">
+                <img src="assets/Images/LOGO/logo.png" class="logo" alt="LOGO">
+            </a>
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="toggler-icon top-bar"></span>
+                <span class="toggler-icon middle-bar"></span>
+                <span class="toggler-icon bottom-bar"></span>
+            </button>
+
+
+
+
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto align-items-center mb-2 gap-3 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link d-flex align-items-center gap-1" aria-current="page" href="about.html">About
+                            <i class="fa-solid fa-chevron-down"></i></a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link d-flex align-items-center gap-1" aria-current="page"
+                            href="service.html">Services <i class="fa-solid fa-chevron-down"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link d-flex align-items-center gap-1" aria-current="page"
+                            href="gallery.html">Gallery <i class="fa-solid fa-chevron-down"></i></a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link d-flex align-items-center gap-1" aria-current="page"
+                            href="contact.html">Contact <i class="fa-solid fa-chevron-down"></i></a>
+                    </li>
+
+                    <li class="nav-item ">
+                        <a class="nav-link d-flex align-items-center gap-1" aria-current="page" href="#applyForm">
+                            Appoinment <i class="fa-solid fa-plus"></i></a>
+                    </li>
+
+                    <!-- Scrollable modal -->
+
+
+                    <a href="tel:+919843997222" class="nav-group">
+                        <div class="nav-contacts gap-2">
+
+                            <div class="nav-icons fa-sm">
+                                <i class="fa-solid fa-phone fa-shake fa-xl"></i>
+                            </div>
+                            <div class="nav-contact-details">
+                                <span>Call Us</span><br>
+                                <span>+919843997222</span>
+                            </div>
+                        </div>
+
+                    </a>
+
+                </ul>
+
+            </div>
+        </div>
+    </nav>
+
+    <!-- NAV SECTION END -->
+
+
+
 
     <!-- JS ELEMENTS -->
     <script src="assets/JS/script.js"></script>
